--- a/web/themes/bobpol/scss/partials/_nav.scss
+++ b/web/themes/bobpol/scss/partials/_nav.scss
@@ -1,3 +1,19 @@
 nav.navbar {
   box-shadow: 0 0 10px rgba(0,0,0,.25)
 }
+.navbar-brand {
+  margin-right: $spacer*2;
+}
+.navbar-nav {
+  .nav-item {
+    border-bottom: 2px solid transparent;
+    .nav-link {
+      font-weight: $font-weight-black;
+      color: $black;
+      text-transform: uppercase;
+    }
+    &.active {
+      border-color: $black;
+    }
+  }
+}
