--- a/web/themes/bobpol/scss/_bootstrap-custom.scss
+++ b/web/themes/bobpol/scss/_bootstrap-custom.scss
@@ -76,7 +76,7 @@ $card-inner-border-radius: 0;
 // @import "../node_modules/bootstrap/scss/_code.scss";
 @import "../node_modules/bootstrap/scss/_grid.scss";
 @import "../node_modules/bootstrap/scss/_tables.scss";
-// @import "../node_modules/bootstrap/scss/_forms.scss";
+@import "../node_modules/bootstrap/scss/_forms.scss";
 @import "../node_modules/bootstrap/scss/_buttons.scss";
 @import "../node_modules/bootstrap/scss/_transitions.scss";
 // @import "../node_modules/bootstrap/scss/_dropdown.scss";
