--- a/web/themes/bobpol/scss/partials/_hero.scss
+++ b/web/themes/bobpol/scss/partials/_hero.scss
@@ -102,14 +102,16 @@ $hero-breakpoint:   "sm";
         background-position: center;
         background-repeat: no-repeat;
     }
-    img.hero__media{
+    .hero__media {
+      img {
         //To hide blur on fade-in image
         width: 104% !important;
         max-width: 104% !important;
 
         @include media-breakpoint-up($hero-breakpoint) {
-            height: 104% !important;
+          height: 104% !important;
         }
+      }
     }
 
 
