SALG-299: Added templates

--- a/web/themes/bobpol/templates/field/field--comment.html.twig
+++ b/web/themes/bobpol/templates/field/field--comment.html.twig
@@ -41,7 +41,7 @@
     {% if comment_form %}
     <div class="col-md-12">
       <h3{{ content_attributes }}>{{ 'Add new comment'|t }}</h3>
-      {{ comment_form }}
+      <div class="form-group">{{ comment_form }}</div>
     </div>
     {% endif %}
   </div>
