--- a/web/themes/bobpol/templates/field/field--comment.html.twig
+++ b/web/themes/bobpol/templates/field/field--comment.html.twig
@@ -31,7 +31,7 @@
     {% if comments and not label_hidden %}
     <div class="col-md-12">
       {{ title_prefix }}
-      <h2{{ title_attributes }}>{{ label }}</h2>
+      <h2{{ title_attributes }}>{% trans %}Contribute{% endtrans %}</h2>
       {{ title_suffix }}
     </div>
     {% endif %}
@@ -40,7 +40,7 @@
 
     {% if comment_form %}
     <div class="col-md-12">
-      <h3{{ content_attributes }}>{{ 'Add new comment'|t }}</h3>
+      <h3{{ content_attributes }}>{{ 'Add contribution'|t }}</h3>
       <div class="form-group">{{ comment_form }}</div>
     </div>
     {% endif %}
