SALG-299: Added html

--- a/web/themes/bobpol/scss/bobpol.scss
+++ b/web/themes/bobpol/scss/bobpol.scss
@@ -16,6 +16,8 @@
 @import 'partials/_content';
 @import 'partials/_drupal';
 @import 'partials/_utilities';
+@import 'partials/_hotness';
+
 
 // Global styles
 
