--- a/web/themes/bobpol/static/css/bobpol.css
+++ b/web/themes/bobpol/static/css/bobpol.css
@@ -6042,16 +6042,6 @@ nav.navbar {
     min-height: 11rem; }
   .card img {
     width: 100%; }
-  .card .btn.hotness-1 {
-    background-color: #3661d8; }
-  .card .btn.hotness-2 {
-    background-color: #008486; }
-  .card .btn.hotness-3 {
-    background-color: #673ab7; }
-  .card .btn.hotness-4 {
-    background-color: #ff5f31; }
-  .card .btn.hotness-5 {
-    background-color: #ee0043; }
 
 /*Icons*/
 /**
@@ -6164,6 +6154,21 @@ nav.navbar {
     background: #ee0043; }
   .underlined--primary:after {
     background: #3661d8; }
+
+.btn.hotness-1 {
+  background-color: #3661d8; }
+
+.btn.hotness-2 {
+  background-color: #008486; }
+
+.btn.hotness-3 {
+  background-color: #673ab7; }
+
+.btn.hotness-4 {
+  background-color: #ff5f31; }
+
+.btn.hotness-5 {
+  background-color: #ee0043; }
 
 body {
   background: #f6f6f6;
