--- a/web/themes/bobpol/scss/partials/_card.scss
+++ b/web/themes/bobpol/scss/partials/_card.scss
@@ -1,6 +1,10 @@
 .card {
   border-bottom: 2px solid $gray-500;
-
+  &-title {
+    .title {
+      color: $black;
+    }
+  }
   .card-img-top {
     height: 10rem;
     background-size: cover;
