--- a/web/themes/bobpol/templates/views/views-exposed-form.html.twig
+++ b/web/themes/bobpol/templates/views/views-exposed-form.html.twig
@@ -19,16 +19,16 @@
 <div class="row">
   <div class="col-8">{{ form }}</div>
   <div class="col-4">
-    <div class="float-md-right mt-3">
+    <div class="float-md-right mt-3 hotness-legend">
       <label>{{ 'Popularity'|t }}</label>
       <div>
-        <span>{{ 'Cold'|t }}</span>
-        <span class="badge btn hotness-1"></span>
-        <span class="badge btn hotness-2"></span>
-        <span class="badge btn hotness-3"></span>
-        <span class="badge btn hotness-4"></span>
-        <span class="badge btn hotness-5"></span>
-        <span>{{ 'hot'|t }}</span>
+        <span class="text-muted">{{ 'Cold'|t }}</span>
+        <span class="badge hotness-1"></span>
+        <span class="badge hotness-2"></span>
+        <span class="badge hotness-3"></span>
+        <span class="badge hotness-4"></span>
+        <span class="badge hotness-5"></span>
+        <span class="text-muted">{{ 'hot'|t }}</span>
       </div>
     </div>
   </div>
