Fix status-messages below navigation.

--- a/web/themes/bobpol/scss/bobpol.scss
+++ b/web/themes/bobpol/scss/bobpol.scss
@@ -17,6 +17,7 @@
 @import 'partials/_drupal';
 @import 'partials/_utilities';
 @import 'partials/_hotness';
+@import 'partials/_status-messages';
 
 
 // Global styles
