Only fix status messages to top, and not all alerts.

--- a/web/themes/bobpol/static/css/bobpol.css
+++ b/web/themes/bobpol/static/css/bobpol.css
@@ -6185,7 +6185,7 @@ nav.navbar {
 .hotness-5 {
   background-color: #ee0043; }
 
-.alert {
+.alert.fixed {
   position: fixed;
   z-index: 10000;
   width: 100%;
