--- a/web/themes/bobpol/scss/partials/_status-messages.scss
+++ b/web/themes/bobpol/scss/partials/_status-messages.scss
@@ -1,8 +1,10 @@
 .alert {
-  position: fixed;
-  z-index: 10000;
-  width: 100%;
-  margin: 0;
-  top: 96px;
-  left: 0;
+  &.fixed {
+    position: fixed;
+    z-index: 10000;
+    width: 100%;
+    margin: 0;
+    top: 96px;
+    left: 0;
+  }
 }
