--- a/web/themes/bobpol/scss/_bootstrap-custom.scss
+++ b/web/themes/bobpol/scss/_bootstrap-custom.scss
@@ -54,7 +54,8 @@ $secondary: $pink;
 // Set default font
 $font-family-sans-serif: Arial, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol" ;
 
-$lead-font-size: 1.2rem;
+$font-size-base: 1.125rem;
+$lead-font-size: 1.625rem;
 $lead-font-weight: 400;
 
 // Disable rounded corners
