--- a/web/themes/bobpol/templates/views/views-view-unformatted.html.twig
+++ b/web/themes/bobpol/templates/views/views-view-unformatted.html.twig
@@ -20,7 +20,7 @@
   <h3>{{ title }}</h3>
 {% endif %}
 {% for row in rows %}
-  <div class="col-md-4 d-flex">
+  <div class="col-md-6 col-lg-4 d-flex">
     {{ row.content }}
   </div>
 {% endfor %}
