Disable umbraco related grid

--- a/web/themes/bobpol/scss/partials/_hero.scss
+++ b/web/themes/bobpol/scss/partials/_hero.scss
@@ -3,7 +3,7 @@
 $hero-breakpoint:   "sm";
 
 .grid-element__hero-image {
-    @include umbraco-grid-full-width;
+    // @include umbraco-grid-full-width;
 
     //Hover animation
     &:hover,
