--- a/web/themes/bobpol/static/css/bobpol.css
+++ b/web/themes/bobpol/static/css/bobpol.css
@@ -1,4 +1,72 @@
+/* @mixin umbraco-grid-full-width() {
+    > .container {
+        width: auto;
+        padding: 0;
+
+        > .row,
+        > .row > .grid-column {
+            margin: 0;
+            padding: 0;
+        }
+    }
+} */
 /*Icons*/
+/* @mixin icon-plus() {
+    content: "+";
+}
+
+@mixin icon-circle-plus() {
+    font-family: $icons-font-family;
+    content: "\e904";
+}
+
+@mixin icon-arrow-up() {
+    font-family: $icons-font-family;
+    content: "\e903";
+}
+
+@mixin icon-arrow-down() {
+    font-family: $icons-font-family;
+    content: "\e900";
+}
+
+@mixin icon-arrow-left() {
+    font-family: $icons-font-family;
+    content: "\e901";
+}
+
+@mixin icon-arrow-right() {
+    font-family: $icons-font-family;
+    content: "\e902";
+}
+
+@mixin icon-arrow-right-alt() {
+    font-family: $icons-font-family;
+    content: "\e91c";
+}
+
+@mixin icon-play() {
+    font-family: $icons-font-family;
+    content: "\e90e";
+}
+
+@mixin icon-image() {
+    font-family: $icons-font-family;
+    content: "\e917";
+}
+
+@mixin icon-minus() {
+    font-family: $icons-font-family;
+    content: "\e91e";
+}
+@mixin icon-cross() {
+    font-family: $icons-font-family;
+    content: "\e907";
+}
+@mixin icon-external-link() {
+    font-family: $icons-font-family;
+    content: "\e90a";
+} */
 /**
  * Computes a CSS calc function that betweens a value from
  * A to B over viewport-width A to viewport-width B.
@@ -5910,21 +5978,81 @@ nav.navbar {
     .navbar-nav .nav-item .nav-link:hover:before, .navbar-nav .nav-item .nav-link.is-active:before {
       opacity: 1; }
 
+/* @mixin umbraco-grid-full-width() {
+    > .container {
+        width: auto;
+        padding: 0;
+
+        > .row,
+        > .row > .grid-column {
+            margin: 0;
+            padding: 0;
+        }
+    }
+} */
 /*Icons*/
+/* @mixin icon-plus() {
+    content: "+";
+}
+
+@mixin icon-circle-plus() {
+    font-family: $icons-font-family;
+    content: "\e904";
+}
+
+@mixin icon-arrow-up() {
+    font-family: $icons-font-family;
+    content: "\e903";
+}
+
+@mixin icon-arrow-down() {
+    font-family: $icons-font-family;
+    content: "\e900";
+}
+
+@mixin icon-arrow-left() {
+    font-family: $icons-font-family;
+    content: "\e901";
+}
+
+@mixin icon-arrow-right() {
+    font-family: $icons-font-family;
+    content: "\e902";
+}
+
+@mixin icon-arrow-right-alt() {
+    font-family: $icons-font-family;
+    content: "\e91c";
+}
+
+@mixin icon-play() {
+    font-family: $icons-font-family;
+    content: "\e90e";
+}
+
+@mixin icon-image() {
+    font-family: $icons-font-family;
+    content: "\e917";
+}
+
+@mixin icon-minus() {
+    font-family: $icons-font-family;
+    content: "\e91e";
+}
+@mixin icon-cross() {
+    font-family: $icons-font-family;
+    content: "\e907";
+}
+@mixin icon-external-link() {
+    font-family: $icons-font-family;
+    content: "\e90a";
+} */
 /**
  * Computes a CSS calc function that betweens a value from
  * A to B over viewport-width A to viewport-width B.
  * Requires a media query to cap the value at B.
  */
 /*Theme Mixin - For use in Umbraco Backend Theme Picker*/
-.grid-element__hero-image > .container {
-  width: auto;
-  padding: 0; }
-  .grid-element__hero-image > .container > .row,
-  .grid-element__hero-image > .container > .row > .grid-column {
-    margin: 0;
-    padding: 0; }
-
 .grid-element__hero-image:hover .underlined:after,
 .grid-element__hero-image a.hero:focus .underlined:after {
   width: 130px; }
@@ -6064,7 +6192,75 @@ nav.navbar {
   .card img {
     width: 100%; }
 
+/* @mixin umbraco-grid-full-width() {
+    > .container {
+        width: auto;
+        padding: 0;
+
+        > .row,
+        > .row > .grid-column {
+            margin: 0;
+            padding: 0;
+        }
+    }
+} */
 /*Icons*/
+/* @mixin icon-plus() {
+    content: "+";
+}
+
+@mixin icon-circle-plus() {
+    font-family: $icons-font-family;
+    content: "\e904";
+}
+
+@mixin icon-arrow-up() {
+    font-family: $icons-font-family;
+    content: "\e903";
+}
+
+@mixin icon-arrow-down() {
+    font-family: $icons-font-family;
+    content: "\e900";
+}
+
+@mixin icon-arrow-left() {
+    font-family: $icons-font-family;
+    content: "\e901";
+}
+
+@mixin icon-arrow-right() {
+    font-family: $icons-font-family;
+    content: "\e902";
+}
+
+@mixin icon-arrow-right-alt() {
+    font-family: $icons-font-family;
+    content: "\e91c";
+}
+
+@mixin icon-play() {
+    font-family: $icons-font-family;
+    content: "\e90e";
+}
+
+@mixin icon-image() {
+    font-family: $icons-font-family;
+    content: "\e917";
+}
+
+@mixin icon-minus() {
+    font-family: $icons-font-family;
+    content: "\e91e";
+}
+@mixin icon-cross() {
+    font-family: $icons-font-family;
+    content: "\e907";
+}
+@mixin icon-external-link() {
+    font-family: $icons-font-family;
+    content: "\e90a";
+} */
 /**
  * Computes a CSS calc function that betweens a value from
  * A to B over viewport-width A to viewport-width B.
