--- a/web/themes/bobpol/scss/_custom-variables.scss
+++ b/web/themes/bobpol/scss/_custom-variables.scss
@@ -111,15 +111,15 @@ $font-size-title:                   4.0rem !default;
 $font-size-teaser:                  1.625rem !default; //26px
 $font-size-teaser-responsive:       1.25rem !default; //20px
 
-$font-size-h1:                      2.375rem !default; //38px
-$font-size-h1-responsive:           1.5rem !default; //25px
-$font-size-h2:                      1.75rem !default; //28px
-$font-size-h2-responsive:           1.25rem !default; //20px
-$font-size-h3:                      1.25rem !default; //20px
-$font-size-h3-responsive:           1.125rem !default; //18px
-$font-size-h4:                      1.25rem !default; //20px
-$font-size-h5:                      0.9375rem !default; //15px
-$font-size-h6:                      1.0625rem !default; //17px
+// $font-size-h1:                      2.375rem !default; //38px
+// $font-size-h1-responsive:           1.5rem !default; //25px
+// $font-size-h2:                      1.75rem !default; //28px
+// $font-size-h2-responsive:           1.25rem !default; //20px
+// $font-size-h3:                      1.25rem !default; //20px
+// $font-size-h3-responsive:           1.125rem !default; //18px
+// $font-size-h4:                      1.25rem !default; //20px
+// $font-size-h5:                      0.9375rem !default; //15px
+// $font-size-h6:                      1.0625rem !default; //17px
 
 
 
