--- a/web/themes/bobpol/scss/partials/_footer.scss
+++ b/web/themes/bobpol/scss/partials/_footer.scss
@@ -23,7 +23,7 @@
 
     h4, h5, h6,
     .title {
-        font-size: $font-size-h5;
+        font-size: $h5-font-size;
         margin-bottom: $spacer/2;
     }
 
