--- a/web/themes/bobpol/scss/bobpol.scss
+++ b/web/themes/bobpol/scss/bobpol.scss
@@ -25,6 +25,8 @@
 body {
     background: $gray-100;
     padding-top: 6rem;
+    word-wrap: break-word;
+    letter-spacing: .05em;
 }
 
 h1, h2, h3, h4, h5, legend {
