--- a/web/themes/bobpol/templates/navigation/menu-local-tasks.html.twig
+++ b/web/themes/bobpol/templates/navigation/menu-local-tasks.html.twig
@@ -14,10 +14,10 @@
 <div class="mt-3 mb-3">
   {% if primary %}
     <h2 class="visually-hidden">{{ 'Primary tabs'|t }}</h2>
-    <ul class="nav">{{ primary }}</ul>
+    <ul class="nav nav-tabs">{{ primary }}</ul>
   {% endif %}
   {% if secondary %}
     <h2 class="visually-hidden">{{ 'Secondary tabs'|t }}</h2>
-    <ul class="nav">{{ secondary }}</ul>
+    <ul class="nav nav-tabs">{{ secondary }}</ul>
   {% endif %}
 </div>
