--- a/web/themes/bobpol/templates/user/user.html.twig
+++ b/web/themes/bobpol/templates/user/user.html.twig
@@ -23,12 +23,13 @@
   {% if (user.field_valid.value == '1') %}
     <span class="badge badge-primary">{{ 'Validated'|t }} {{ content.field_validation_date }} </span>
   {% else %}
-    <div class="card mb-3">
+    <div class="card mb-3 nemid-validation">
       <div class="card-body">
         <h5 class="card-title">{{ 'Validate with NemID'|t }}</h5>
         <p class="card-text">{{ 'Before you can contribute you must validate your user account with NemID.'|t }}</p>
         <p class="card-text">{{ 'You only have to do it once, and you can do it now.'|t }}</p>
         <a href="#" class="btn btn-primary">{{ 'Validate'|t }}</a>
+        <img class="image-fluid float-right" style="width:auto;" src="/themes/bobpol/static/images/NEMID_RGB_BLACK.svg" alt="NemID logo">
       </div>
     </div>
   {% endif %}
