--- a/web/themes/bobpol/templates/ds/ds-2col-stacked--user.html.twig
+++ b/web/themes/bobpol/templates/ds/ds-2col-stacked--user.html.twig
@@ -27,7 +27,11 @@
 
   <{{ header_wrapper }}{{ header_attributes.addClass('group-header hero-container') }}>
     <div class="hero hero--image-right">
-      {{ header }}
+      <div class="container">
+        <div class="hero__content">
+          <h1 class="title underlined hero__title pt-4 pb-4">{{ 'My page'|t }}</h1>
+        </div>
+      </div>
     </div>
   </{{ header_wrapper }}>
   <div class="container  content__container">
@@ -35,6 +39,19 @@
       <{{ left_wrapper }}{{ left_attributes.addClass('content group-left col-md-8') }}>
         <div class="content__main ">
           {{ left }}
+          {% if (user.field_valid.value == '1') %}
+            <span class="badge badge-primary">{{ 'Validated'|t }} {{ content.field_validation_date }} </span>
+          {% else %}
+            <div class="card mb-3 nemid-validation">
+              <div class="card-body">
+                <h5 class="card-title">{{ 'Validate with NemID'|t }}</h5>
+                <p class="card-text">{{ 'Before you can contribute you must validate your user account with NemID.'|t }}</p>
+                <p class="card-text">{{ 'You only have to do it once, and you can do it now.'|t }}</p>
+                <a href="#" class="btn btn-primary">{{ 'Validate'|t }}</a>
+                <img class="image-fluid float-right" style="width:auto;" src="/themes/bobpol/static/images/NEMID_RGB_BLACK.svg" alt="NemID logo">
+              </div>
+            </div>
+          {% endif %}
         </div>
       </{{ left_wrapper }}>
 
