markup and styling for aside

--- a/web/themes/bobpol/scss/bobpol.scss
+++ b/web/themes/bobpol/scss/bobpol.scss
@@ -14,6 +14,7 @@
 @import 'partials/_card';
 @import 'partials/_footer';
 @import 'partials/_content';
+@import 'partials/_aside';
 @import 'partials/_drupal';
 @import 'partials/_utilities';
 @import 'partials/_hotness';
