--- a/web/themes/bobpol/templates/ds/ds-2col-stacked.html.twig
+++ b/web/themes/bobpol/templates/ds/ds-2col-stacked.html.twig
@@ -40,6 +40,14 @@
 
       <{{ right_wrapper }}{{ right_attributes.addClass('group-right col-md-4') }}>
         {{ right }}
+        <h4>Informationer</h4>
+        <p>Dette svar tager udgangpunkt i, nunc eu placerat consectetur, libero velit laoreet dui, eu laoreet elit metus porttitor ipsum.</p>
+        <h4>Vil du vide mere</h4>
+        <p>Læs om borgerindragelse på Aarhus.dk</p>
+        <ul>
+          <li><a href="#">Borgerindragelse</a></li>
+          <li><a href="#">Demokrati</a></li>
+        </ul>
       </{{ right_wrapper }}>
     </div>
   </div>
