--- a/web/themes/bobpol/static/css/bobpol.css
+++ b/web/themes/bobpol/static/css/bobpol.css
@@ -6421,6 +6421,16 @@ nav.navbar {
 .lead {
   padding: 1em 0; }
 
+.group-right {
+  padding-top: 2rem;
+  padding-bottom: 2rem; }
+  @media (min-width: 768px) {
+    .group-right {
+      padding-top: 2.5rem;
+      padding-bottom: 2.5rem;
+      padding-left: 2.5rem;
+      padding-right: 0; } }
+
 .toolbar-oriented .toolbar-bar {
   z-index: 2000; }
 
