Fix position of statusmessages when scrolled

--- a/web/themes/bobpol/scss/partials/_status-messages.scss
+++ b/web/themes/bobpol/scss/partials/_status-messages.scss
@@ -6,5 +6,10 @@
     margin: 0;
     top: 96px;
     left: 0;
+    transition: top .4s ease-out;
+    .scrolled & {
+      top: 62px;
+      transition: top .2s ease-in;
+    }
   }
 }
