SALG-299: Changed user account settings

--- a/web/themes/bobpol/templates/ds/ds-2col-stacked--user.html.twig
+++ b/web/themes/bobpol/templates/ds/ds-2col-stacked--user.html.twig
@@ -26,13 +26,7 @@
   {{ title_suffix.contextual_links }}
 
   <{{ header_wrapper }}{{ header_attributes.addClass('group-header hero-container') }}>
-    <div class="hero hero--image-right">
-      <div class="container">
-        <div class="hero__content">
-          <h1 class="title underlined hero__title pt-4 pb-4">{{ 'My page'|t }}</h1>
-        </div>
-      </div>
-    </div>
+    {{ header }}
   </{{ header_wrapper }}>
   <div class="container  content__container">
     <div class="row">
