--- a/web/themes/bobpol/templates/layout/page--user.html.twig
+++ b/web/themes/bobpol/templates/layout/page--user.html.twig
@@ -54,6 +54,19 @@
   </div>
 </nav>
 
+<div class="group-header hero-container">
+  <div class="hero hero--image-right">
+    <div class="container">
+      <div class="hero__content">
+        <h1 class="title underlined hero__title pt-4 pb-4">
+          {% if page['#title'] %}
+            {{ page['#title'] }}
+          {% endif %}
+        </h1>
+      </div>
+    </div>
+  </div>
+</div>
 {% if page.hero %}
   {{ page.hero }}
 {% endif %}
