--- a/web/themes/bobpol/scss/bobpol.scss
+++ b/web/themes/bobpol/scss/bobpol.scss
@@ -18,6 +18,7 @@
 @import 'partials/_drupal';
 @import 'partials/_utilities';
 @import 'partials/_hotness';
+@import 'partials/_timeline';
 @import 'partials/_status-messages';
 
 
@@ -32,4 +33,7 @@ body {
 
 h1, h2, h3, h4, h5, legend {
   text-transform: uppercase;
+}
+p {
+  max-width: 45rem;
 }
