--- a/web/themes/bobpol/templates/navigation/menu-local-tasks.html.twig
+++ b/web/themes/bobpol/templates/navigation/menu-local-tasks.html.twig
@@ -14,7 +14,8 @@
 <div class="mt-3 mb-3">
   {% if primary %}
     <h2 class="visually-hidden">{{ 'Primary tabs'|t }}</h2>
-    <ul class="nav nav-tabs">{{ primary }}</ul>
+    <h4>{{ 'Options'|t }}</h4>
+    <ul class="nav flex-column nav-pills">{{ primary }}</ul>
   {% endif %}
   {% if secondary %}
     <h2 class="visually-hidden">{{ 'Secondary tabs'|t }}</h2>
