--- a/web/themes/bobpol/templates/form/bobpol-user-form.html.twig
+++ b/web/themes/bobpol/templates/form/bobpol-user-form.html.twig
@@ -12,7 +12,7 @@
     <div class="group-right col-md-4">
       <h4>{{ 'Account activities'|t }}</h4>
       {% if(form['#user_account'].field_valid['0'].value > 0) %}
-        <p>{{ 'The account was validated on'|t }} {{ form['#user_account'].field_validation_date['0'].value|date('j. F Y - i:H') }}</p>
+        <p>{{ 'The account was validated on'|t }} {{ form['#user_account'].field_validation_date['0'].value|date('j. F Y - H:i', "Europe/Paris") }}</p>
       {% else %}
         <p>{{ 'The account has not been validated' }}</p>
       {% endif %}
@@ -20,8 +20,8 @@
       <h4>{{ 'Options'|t }}</h4>
       {% if(not form['#user_account'].field_valid['0'].value == 1) %}
         <p><a href="{{ path('bobpol_user_validate.saml.login', { ref :  path('<current>') }) }}">{{ 'Validate account'|t }}</a></p>
-        <p><a href="/user/{{ form['#user_account'].id }}">{{ 'Show profile'|t }}</a></p>
       {% endif %}
+      <p><a href="/user/{{ form['#user_account'].id }}">{{ 'Show profile'|t }}</a></p>
       <p>{{ form.actions.delete }}</p>
     </div>
   </div>
