SALG-299: Added styling for pager

--- a/web/themes/bobpol/scss/_bootstrap-custom.scss
+++ b/web/themes/bobpol/scss/_bootstrap-custom.scss
@@ -95,7 +95,7 @@ $card-inner-border-radius: 0;
 @import "../node_modules/bootstrap/scss/_navbar.scss";
 @import "../node_modules/bootstrap/scss/_card.scss";
 // @import "../node_modules/bootstrap/scss/_breadcrumb.scss";
-// @import "../node_modules/bootstrap/scss/_pagination.scss";
+@import "../node_modules/bootstrap/scss/_pagination.scss";
 @import "../node_modules/bootstrap/scss/_badge.scss";
 // @import "../node_modules/bootstrap/scss/_jumbotron.scss";
 @import "../node_modules/bootstrap/scss/_alert.scss";
