--- a/web/themes/bobpol/static/css/bobpol.css
+++ b/web/themes/bobpol/static/css/bobpol.css
@@ -3155,6 +3155,62 @@ input[type="button"].btn-block {
   border-top-left-radius: 0;
   border-top-right-radius: 0; }
 
+.pagination {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding-left: 0;
+  list-style: none; }
+
+.page-link {
+  position: relative;
+  display: block;
+  padding: 0.5rem 0.75rem;
+  margin-left: -1px;
+  line-height: 1.25;
+  color: #3661d8;
+  background-color: #ffffff;
+  border: 1px solid #e6e6e6; }
+  .page-link:hover {
+    z-index: 2;
+    color: #1f42a2;
+    text-decoration: none;
+    background-color: #eaeaea;
+    border-color: #e6e6e6; }
+  .page-link:focus {
+    z-index: 2;
+    outline: 0;
+    -webkit-box-shadow: 0 0 0 0.2rem rgba(54, 97, 216, 0.25);
+            box-shadow: 0 0 0 0.2rem rgba(54, 97, 216, 0.25); }
+  .page-link:not(:disabled):not(.disabled) {
+    cursor: pointer; }
+
+.page-item:first-child .page-link {
+  margin-left: 0; }
+
+.page-item.active .page-link {
+  z-index: 1;
+  color: #ffffff;
+  background-color: #3661d8;
+  border-color: #3661d8; }
+
+.page-item.disabled .page-link {
+  color: #9d9d9d;
+  pointer-events: none;
+  cursor: auto;
+  background-color: #ffffff;
+  border-color: #e6e6e6; }
+
+.pagination-lg .page-link {
+  padding: 0.75rem 1.5rem;
+  font-size: 1.40625rem;
+  line-height: 1.5; }
+
+.pagination-sm .page-link {
+  padding: 0.25rem 0.5rem;
+  font-size: 0.98438rem;
+  line-height: 1.5; }
+
 .badge {
   display: inline-block;
   padding: 0.25em 0.4em;
