SALG-299: Disable google crawling and indexing

--- a/web/themes/bobpol/templates/layout/html.html.twig
+++ b/web/themes/bobpol/templates/layout/html.html.twig
@@ -32,6 +32,9 @@
     <js-placeholder token="{{ placeholder_token|raw }}">
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/solid.js" integrity="sha384-Q7KAHqDd5trmfsv85beYZBsUmw0lsreFBQZfsEhzUtUn5HhpjVzwY0Aq4z8DY9sA" crossorigin="anonymous"></script>
     <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/fontawesome.js" integrity="sha384-M2FSA4xMm1G9m4CNXM49UcDHeWcDZNucAlz1WVHxohug0Uw1K+IpUhp/Wjg0y6qG" crossorigin="anonymous"></script>
+    <!-- Remove after release -->
+    <meta name="robots" content="noindex" />
+    <!-- Remove after release END-->
   </head>
   <body{{ attributes }}>
     <!-- ADFS logout HACK -->
