remove d-flex class on frontpage cards, possible fix for ie11 flexbox issues.

--- a/web/themes/bobpol/scss/partials/_card.scss
+++ b/web/themes/bobpol/scss/partials/_card.scss
@@ -1,5 +1,6 @@
 .card {
   border-bottom: 2px solid $gray-500;
+  height: 100%;
   &-title {
     .title {
       color: $black;
@@ -11,7 +12,7 @@
     background-position: center center;
   }
   .card-body {
-    min-height: 11rem;
+    min-height: 5rem;
   }
 
   img {
