--- a/web/themes/bobpol/scss/partials/_nav.scss
+++ b/web/themes/bobpol/scss/partials/_nav.scss
@@ -32,16 +32,19 @@ nav.navbar {
           opacity: 0;
           content: "";
           position: absolute;
-          height: 4px;
+          height: 0px;
           left: 8px;
           right: 8px;
           bottom: 0;
           background: $primary;
+          transition: height .2s ease-out, opacity .2s ease-out;
         }
         &:hover, &.is-active {
           color: $black;
           &:before {
             opacity: 1;
+            transition: height .2s ease-in, opacity .2s ease-in;
+            height: 4px;
           }
         }
       }
