SALG-344: Added quickfixes to templates

--- a/web/themes/bobpol/templates/content/comment.html.twig
+++ b/web/themes/bobpol/templates/content/comment.html.twig
@@ -77,7 +77,7 @@
     <div class="card-body">
       {% if title %}
         {{ title_prefix }}
-        <h4 class="card-title"{{ title_attributes }}>{{ title }}</h4>
+        <h4 class="card-title"{{ title_attributes }}>{{ title|striptags }}</h4>
         {{ title_suffix }}
       {% endif %}
       <p class="card-text">
