--- a/web/themes/bobpol/templates/block/block--system-menu-block.html.twig
+++ b/web/themes/bobpol/templates/block/block--system-menu-block.html.twig
@@ -46,7 +46,9 @@
   {% endblock %}
   <hr class="d-md-none">
   {% if (user.id > 0) %}
-  <a href="/user/logout" class="mr-3">{{ 'Log out'|t }}</a>
+    <a href="/user/logout" class="mr-3">{{ 'Log out'|t }}</a>
+  {% else %}
+    <a href="/user/login" class="mr-3">{{ 'Log in'|t }}</a>
   {% endif %}
   <a href="/user" class="btn btn-primary rounded-circle"><i class="fas fa-user"></i></a>
 </div>
