SALG-348: Modified filter form

--- a/web/themes/bobpol/templates/form/form-element--radio.html.twig
+++ b/web/themes/bobpol/templates/form/form-element--radio.html.twig
@@ -44,8 +44,7 @@
  * @see template_preprocess_form_element()
  */
 #}
-
-<label class="btn btn-category {{ element['#attributes']['checked'] ? 'active' : '' }}">
+<label title="{{ attributes.title }}" class="btn btn-category {{ element['#attributes']['checked'] ? 'active' : '' }}">
   {{ children }} {{ label['#title'] }}
 </label>
 
